# py-capellambse

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  pyproject.toml  searchindex.js
.github/: dependabot.yml
.github/workflows/: build.yml  code-qa.yml
code/: capellambse.model.html
development/: repl.html
docs/source/: conf.py  index.rst
docs/source/development/: how-to-explore-capella-mm.rst
docs/source/examples/: 01 Introduction.ipynb  02 Intro to Physical Architecture API.ipynb  03 Data Values.ipynb  04 Intro to Jinja templating.ipynb  05 Introduction to Libraries.ipynb  06 Introduction to Requirement access and management.ipynb  07 Code Generation.ipynb  08 Property Values.ipynb  09 Context Diagrams.ipynb  10 Declarative Modeling.ipynb  11 Complexity Assessment.ipynb
docs/source/start/: installation.rst  migrating-0.6.rst
rust/: Cargo.toml
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/src/: exs.rs  lib.rs  model.rs  namespace.rs  parse.rs  pytypes.rs
scripts/: ecore2py.py  mkchangelog.py  release.py
src/: lib.rs  model.rs  namespace.rs  parse.rs  pytypes.rs
src/capellambse/: __init__.py  __main__.py  _compiled.pyi  _diagram_cache.py  _namespaces.py  _native.py  cli_helpers.py  decl.py  helpers.py  sphinx.py
tests/: conftest.py  test_aird_parser.py  test_cli_helpers.py  test_decl.py  test_exs.py  test_filehandler_git.py  test_helpers.py  test_model_creation_deletion.py  test_model_diagram.py  test_model_layers.py  test_model_loading.py  test_model_pvmt.py  test_reqif.py  test_validation.py
(+63 files in other folders)
