# SPDX-FileCopyrightText: Copyright DB InfraGO AG
# SPDX-License-Identifier: Apache-2.0

[package]
name = "capellambse"
version = "0.1.0"
edition = "2024"

[dependencies]
capellambse_macros = { version = "0.1.0", path = "macros" }
pyo3 = { version = "0.27.1", features = ["abi3-py310", "extension-module"] }
quick-xml = "0.38.4"

[lib]
name = "_compiled"
path = "src/lib.rs"
crate-type = ["cdylib"]
